--- a/shelter/css/style.css
+++ b/shelter/css/style.css
@@ -163,3 +163,60 @@ body {
   margin-left: 4.26rem;
   background-image: url("../assets/img/not-only-dog.png");
 }
+
+
+/* ****************************** */
+/* SECTION - ABOUT                */
+/* ****************************** */
+
+.about {
+  height: 58.8rem;
+  background-color: #ffffff;
+}
+
+.about-content {
+  padding: 8rem 4rem 10rem 4rem;
+}
+
+.about-container {
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  gap: 12rem;
+}
+
+.about-img {
+  width: 30rem;
+  height: 40.8rem;
+  background: url("../assets/img/about-pets.png") no-repeat;
+}
+
+.about-text-container {
+  width: 43rem;
+}
+
+.about-heading {
+  width: 35rem;
+  margin-top: 1.5rem;
+  margin-left: 0.03rem;
+  font-family: Georgia;
+  font-size: 3.5rem;
+  font-weight: 400;
+  line-height: 4.5rem;
+  letter-spacing: 0.21rem;
+  color: #545454;
+}
+
+.about-text {
+  margin-top: 2.4rem;
+  margin-left: 0.07rem;
+  font-size: 1.5rem;
+  line-height: 2.4rem;
+  color: #4c4c4c;
+}
+
+.about-text p:last-child {
+  margin-top: 2.5rem;
+}
+
+
