--- a/shelter/css/style.css
+++ b/shelter/css/style.css
@@ -19,6 +19,11 @@ body {
 /* GENERAL REUSABLE STYLES        */
 /* ****************************** */
 
+section {
+  min-width: 128rem;
+  margin: 0 auto;
+}
+
 .content-width {
   width: 120rem;
   margin: 0 auto;
@@ -35,44 +40,55 @@ body {
 
 .header {
   display: flex;
-  align-items: center;
   min-width: 128rem;
+  align-items: center;
 }
 
 .navbar {
   display: flex;
+  margin-top: 3rem;
   justify-content: space-between;
   align-items: center;
-  margin-top: 3rem;
+  z-index: 999;
 }
 
 .logo-title {
-  color: #f1cdb3;
-  font-size: 3.2rem;
-  font-family: Georgia;
-  letter-spacing: 0.2rem;
-  line-height: 3.5rem;
   margin-top: 0.05rem;
   margin-bottom: 0.9rem;
-  margin-left: 0.03rem;
+  margin-left: 0.01rem;
+  font-family: Georgia;
+  font-size: 3.2rem;
+  line-height: 3.5rem;
+  letter-spacing: 0.19rem;
+  color: #f1cdb3;
+}
+
+.logo-link:link, 
+.logo-link:visited{
+  color: #f1cdb3;
+}
+
+.logo-link:hover, 
+.logo-link:active {
+  cursor: pointer;
 }
 
 .logo-subtitle {
-  color: #ffffff;
+  margin-left: 0.4rem;
   font-size: 1.3rem;
   line-height: 1.5rem;
   letter-spacing: 0.13rem;
-  margin-left: 0.4rem;
+  color: #ffffff;
 }
 
 .nav-list {
   display: flex;
-  justify-content: space-between;
   width: 44.24rem;
-  list-style: none;
+  margin-top: -0.27rem;
+  justify-content: space-between;
   font-size: 1.5rem;
   line-height: 2.4rem;
-  margin-top: -0.27rem;
+  list-style: none;
 }
 
 .nav-link {
@@ -82,15 +98,24 @@ body {
   transition: all 0.5s ease-out;
 }
 
-.nav-link:link, .nav-link:visited {
+.nav-link:link, 
+.nav-link:visited {
   color: #cdcdcd;
+}
+
+.nav-link.active {
+  color: #fafafa;
+  text-decoration-color: #f1cdb3;
+}
+
+.nav-link:hover.active {
+  cursor: default;
 }
 
 .nav-link:hover, 
 .nav-link:active {
-  cursor: pointer;
   color: #fafafa;
-  text-decoration-color: #f1cdb3;
+  cursor: pointer;
 }
 
 
@@ -99,11 +124,9 @@ body {
 /* ****************************** */
 
 .not-only {
-  background: url(../assets/img/not-only-bg.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
   height: 90.8rem;
-  min-width: 128rem;
-  margin: 0 auto;
   margin-top: -8.91rem;
+  background: url(../assets/img/not-only-bg.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
 }
 
 .not-only-content {
@@ -112,55 +135,55 @@ body {
 
 .not-only-heading {
   width: 40rem;
+  margin-left: 0.02rem;
   padding-top: 34.4rem;
-  margin-left: 0.04rem;
-  color: #ffffff;
   font-family: Georgia;
-  font-weight: 400;
   font-size: 4.4rem;
+  font-weight: 400;
   line-height: 5.7rem;
+  color: #ffffff;
 }
 
 .not-only-text {
   width: 46rem;
-  color: #cdcdcd;
-  font-weight: 400;
-  font-size: 1.5rem;
-  line-height: 2.4rem;
   margin-top: 4.1rem;
-  margin-left: 0.04rem;
+  margin-left: 0.01rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 2.4rem;
+  color: #cdcdcd;
 }
 
 .not-only-btn {
-  margin-top: 4.11rem;
-  margin-left: 0.04rem;
-  padding-top: 0.1rem;
   width: 20.7rem;
   height: 5.2rem;
+  margin-top: 4.11rem;
+  margin-left: 0.01rem;
+  padding: 1.5rem 4.5rem;
   background-color: #f1cdb3;
-  border-radius: 10rem;
   border: none;
+  border-radius: 10rem;
   transition: 0.3s;
 }
 
 .not-only-btn:hover {
-  cursor: pointer;
   background-color: #fddcc4;
+  cursor: pointer;
 }
 
 .not-only-link {
-  color: #292929;
   font-family: Georgia;
   font-size: 1.7rem;
   line-height: 2.21rem;
   letter-spacing: 0.099rem;
+  color: #292929;
 }
 
 .not-only-img {
   width: 69.8rem;
   height: 72.8rem;
   margin-top: 18rem;
-  margin-left: 4.26rem;
+  margin-left: 4.2rem;
   background-image: url("../assets/img/not-only-dog.png");
 }
 
