--- a/shelter/css/style_queries.css
+++ b/shelter/css/style_queries.css
@@ -111,6 +111,7 @@
 
   .help-list {
     width: 63rem;
+    height: 44.9rem;
     gap: 6rem;
     row-gap: 5.6rem;
     justify-content: center;
@@ -181,7 +182,6 @@
     margin-top: 0.5rem;
     margin-left: 20.4rem;
   }
-
 }
 
 
@@ -191,5 +191,347 @@
 /* ****************************** */
 
 @media (max-width: 20em) {
+  /* GENERAL */
+  section {
+    min-width: 32rem;
+  }
+
+  .content-width {
+    width: 30rem;
+  }
+
+  /* HEADER */
+  .header {
+    min-width: 28rem;
+  }
+
+  .logo-container {
+    margin-left: 1rem;
+  }
+
+  .nav-list {
+    display: none;
+  }
+
+  .burger-menu {
+    display: block;
+    margin-left: 5.4rem;
+  }
+
+  .burger-line {
+    display: block;
+    width: 3rem;
+    height: 0.2rem;
+    margin: 0.8rem auto;
+    background-color: #f1cdb3;
+  }
+
+  /* SECTION - NOT ONLY */
+  .not-only {
+    height: 82.3rem;
+  }
+
+  .not-only-text-container {
+    width: 30rem;
+  }
+
+  .not-only-heading {
+    width: 22rem;
+    margin-left: 4.07rem;
+    padding-top: 15rem;
+    font-size: 2.5rem;
+    line-height: 3.25rem;
+    letter-spacing: 0.15rem;
+    text-align: center;
+  }
+
+  .not-only-text {
+    width: 30rem;
+    text-align: center;
+  }
+
+  .not-only-btn {
+    margin-left: 4.6rem;
+  }
+
+  .not-only-img {
+    width: 26rem;
+    height: 27.177rem;
+    margin-top: 10.53rem;
+    margin-left: 3.98rem;
+    background-size: 26rem 27.177rem;
+  }
+
+  /* SECTION - ABOUT */
+  .about {
+    height: 97.4rem;
+  }
+
+  .about-content {
+    width: 30rem;
+    padding: 0;
+    padding-top: 4.2rem;
+    padding-left: 0.1rem;
+  }
+
+  .about-container {
+    width: 30rem;
+    gap: 4.2rem;
+  }
+
+  .about-img {
+    width: 26rem;
+    height: 35.36rem;
+    background-size: 26rem 35.36rem;
+    margin-top: -0.05rem;
+    margin-left: 1.9rem;
+  }
+
+  .about-text-container {
+    width: 30rem;
+  }
+
+  .about-heading {
+    width: 28rem;
+    margin: 0 auto;
+    margin-bottom: 2.4rem;
+    font-size: 2.5rem;
+    line-height: 3.25rem;
+    letter-spacing: 0.15rem;
+    text-align: center;
+  }
+
+  .about-text {
+    width: 27rem;
+    margin: 0 auto;
+    text-align: justify;
+  }
+
+  .about-text p:last-child {
+    margin-top: 2.2rem;
+  }
+
+  /* SECTION - OUR-FRIENDS */
+  .our-friends {
+    height: 79.1rem;
+  }
+
+  .our-friends-content {
+    width: 30rem;
+  }
+
+  .card:nth-child(2) {
+    display: none;
+  }
+
+  .our-friends-content {
+    padding-top: 4.1rem;
+  }
+
+  .our-friends-heading{
+    width: 30rem;
+    font-size: 2.5rem;
+    line-height: 3.25rem;
+    letter-spacing: 0.15rem;
+  }
+
+  .our-friends-slider {
+    height: 50.7rem;
+    margin-top: 2rem;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .arrow-left {
+    order: 2;
+  }
+
+  .slider {
+    order: 1;
+    gap: 0rem;
+    margin-top: 2.1rem;
+    margin-bottom: 2rem;
+  }
+
+  .arrow-right {
+    order: 3;
+    margin-left: 8rem;
+  }
+
+  .card-btn {
+    margin-top: 3.1rem;
+  }
+
+  .our-friends-btn {
+    margin-top: 6.3rem;
+  }
+
+
+  /* SECTION - HELP */
+  .help {
+    height: 74.5rem; 
+  }
+
+  .help-content {
+    width: 30rem;
+  }
+
+  .help-heading {
+    width: 26rem;
+    margin: 0 auto;
+    margin-top: 4.2rem;
+    font-size: 2.5rem;
+    line-height: 3.22rem;
+    letter-spacing: 0.15rem;
+  }
+
+  .help-heading br {
+    display: none;
+  }
+
+  .help-list {
+    width: 29.1rem;
+    height: 55.5rem;
+    margin-top: 4.1rem;
+    gap: 3rem;
+    row-gap: 3rem;
+    justify-content: space-between;
+  }
+
+  .help-item {
+    height: 8.7rem;
+    row-gap: 2rem;
+    justify-content: flex-start;
+  }
+
+  .help-icon {
+    width: 5rem;
+    height: 5rem;
+    margin: 0 4rem;
+    background-size: 5rem 5rem;
+  }
+
+  .help-text {
+    margin-left: 0.1rem;
+    font-size: 1.5rem;
+    line-height: 1.65rem;
+    letter-spacing: 0.09rem;
+  }
+
+  /* SECTION - IN-ADDITION */
+  .in-addition {
+    height: 54.2rem;
+  }
+
+  .in-addition-content {
+    width: 30rem;
+    row-gap: 4.2rem;
+    padding-top: 4.2rem;
+  }
+
+  .in-addition-img {
+    width: 26rem;
+    height: 13.52rem;
+    margin: 0 auto;
+    background-size: 26rem 13.52rem;
+  }
+
+  .in-addition-text {
+    width: 30rem;
+    margin: 0 auto;
+  }
+
+  .in-addition-heading {
+    font-size: 2.5rem;
+    line-height: 3.25rem;
+    letter-spacing: 0.15rem;
+    text-align: center;
+  }
+
+  .in-addition-subheading {
+    margin-top: 0.2rem;
+    margin-bottom: 0.4rem;
+    text-align: center;
+    letter-spacing: normal;
+  }
+
+  .in-addition-credit-card {
+    width: 28.1rem;
+    height: 4.3rem;
+    margin: 0 auto;
+  }
+
+  .credit-card-number {
+    font-size: 1.5rem;
+    line-height: 2.3rem;
+    letter-spacing: 0.09rem;
+  }
+
+  .in-addition-legal-info {
+    width: 28rem;
+    margin: 0 auto;
+    text-align: justify;
+  }
+
+  /* FOOTER */
+  .footer {
+    min-width: 32rem;
+    height: 80.9rem;
+  }
+
+  .footer-content {
+    width: 30rem;
+    gap: 4rem;
+  }
+
+  .footer-contacts {
+    width: 27.8rem;
+    margin: 0 auto;
+  }
+
+  .footer-title {
+    margin-top: -0.1rem;
+    margin-bottom: 4.05rem;
+    font-size: 2.5rem;
+    line-height: 3.23rem;
+    letter-spacing: 0.15rem;
+    text-align: center;
+  }
+  
+  .footer-container {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .footer-locations {
+    width: 30rem;
+    margin: 0 auto;
+  }
+
+  .locations-title {
+    width: 27rem;
+    margin: 0 auto;
+  }
+
+  .locations-container-boston {
+    margin-top: 4.05rem;
+    margin-left: -0.25rem;
+  }
+
+  .locations-container-london {
+    margin-top: 3.9rem;
+    margin-left: -1.5rem;
+  }
+
+  .locations-icon2 {
+    margin-top: 0.1rem;
+  }
+  
+  .footer-img {
+    width: 26rem;
+    height: 26.9rem;
+    margin: 0 auto;
+    background-size: 26reM 26.9rem;
+  }
 
 }
