--- a/shelter/css/style.css
+++ b/shelter/css/style.css
@@ -20,11 +20,6 @@ body {
 /* GENERAL REUSABLE STYLES        */
 /* ****************************** */
 
-section {
-  min-width: 128rem;
-  margin: 0 auto;
-}
-
 .content-width {
   width: 120rem;
   margin: 0 auto;
@@ -41,8 +36,10 @@ section {
 
 .header {
   display: flex;
-  min-width: 128rem;
+  max-width: 128rem;
+  margin: 0 auto;
   align-items: center;
+  justify-content: center;
 }
 
 .navbar {
@@ -250,12 +247,12 @@ section {
 }
 
 
-
 /* ****************************** */
 /* SECTION - OUR-FRIENDS          */
 /* ****************************** */
 
 .our-friends {
+  width: 100%;
   height: 87.7rem;
   background-color: #f6f6f6;
 }
@@ -625,7 +622,6 @@ section {
 /* ****************************** */
 
 .footer {
-  min-width: 128rem;
   height: 35rem;
   margin: 0 auto;
   background: url(../assets/img/not-only-bg.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
