--- a/shelter/css/style_queries.css
+++ b/shelter/css/style_queries.css
@@ -5,10 +5,6 @@
 
 @media (max-width: 79.99em) {
   /* GENERAL */
-  section {
-    min-width: 95%;
-  }
-
   .content-width {
     width: 95%;
   }
@@ -97,7 +93,7 @@
 @media (max-width: 48em) {
   /* GENERAL */
   section {
-    min-width: 76.8rem;
+    max-width: 76.8rem;
   }
   
   .content-width {
@@ -175,8 +171,8 @@
   }
 
   .slider {
-    margin: 0 1.2rem;
-    gap: 4rem;
+    margin: 0 1.3rem;
+    gap: 3.7rem;
   }
 
   .card:nth-child(3) {
@@ -238,7 +234,7 @@
 
   /* FOOTER */
   .footer {
-    min-width: 76.8rem;
+    max-width: 76.8rem;
     height: 63.9rem;
   }
 
@@ -503,23 +499,23 @@
 
 @media (max-width: 20em) {
   /* GENERAL */
-  section {
-    min-width: 32rem;
-  }
-
   .content-width {
     min-width: 30rem;
   }
 
   /* HEADER */
   .header {
-    min-width: 28rem;
+    max-width: 32rem;
     margin-left: 0;
     margin-right: 0;
   }
 
   .logo-container {
-    margin-left: 2rem;
+    margin-left: 1.2rem;
+  }
+
+  .navbar {
+    max-width: 32rem;
   }
 
   .nav-list {
@@ -528,7 +524,7 @@
 
   .burger-menu {
     display: block;
-    margin-left: 6.4rem;
+    margin-left: 5.2rem;
     order: unset;
   }
 
