--- a/shelter/css/pets.css
+++ b/shelter/css/pets.css
@@ -13,6 +13,19 @@ body {
   font-family: Arial;
   font-weight: 400;
   min-height: 100vh;
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(41, 41, 41, 0.6);
+  overflow: hidden;
+  z-index: 10;
+  visibility: hidden;
 }
 
 
@@ -76,6 +89,19 @@ body {
   line-height: 1.5rem;
   letter-spacing: 0.13rem;
   color: #292929;
+}
+
+.burger-menu {
+  display: none;
+  z-index: 12;
+}
+
+.burger-line {
+  z-index: 12;
+}
+
+.nav-container {
+  z-index: 11;
 }
 
 .nav-list {
