--- a/shelter/css/style.css
+++ b/shelter/css/style.css
@@ -16,16 +16,29 @@ body {
   position: relative;
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(41, 41, 41, 0.6);
-  overflow: hidden;
-  z-index: 10;
-  visibility: hidden;
+
+/* ****************************** */
+/* KEYFRAMES                      */
+/* ****************************** */
+
+@keyframes slide-left {
+  from {left: -108rem;}
+  to {left: 0rem;}
+}
+
+.move-left {
+  animation-name: slide-left;
+  animation-duration: 3.5s;
+}
+
+@keyframes slide-right {
+  from {left: -108rem;}
+  to {left: -216rem;}
+}
+
+.move-right {
+  animation-name: slide-right;
+  animation-duration: 3.5s;
 }
 
 
@@ -40,6 +53,18 @@ body {
 
 .link-common {
   text-decoration: none;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(41, 41, 41, 0.6);
+  overflow: hidden;
+  z-index: 10;
+  visibility: hidden;
 }
 
 
@@ -58,7 +83,6 @@ body {
 
 .navbar {
   display: flex;
-  /* margin-top: 3rem; */
   justify-content: space-between;
   align-items: center;
 }
@@ -151,7 +175,6 @@ body {
   position: relative;
   height: 90.8rem;
   padding-top: 3rem;
-  /* margin-top: -9rem; */
   background: url(../assets/img/not-only-bg.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
 }
 
@@ -349,9 +372,22 @@ body {
   background-position: center;
 }
 
+.slider-wrapper {
+  width: 99rem;
+  height: 43.5rem;
+  margin: 0 5.3rem;
+  overflow: hidden;
+}
+
 .slider {
   display: flex;
-  margin: 0 5.3rem;
+  position: relative;
+  left: -108rem;
+  gap: 9rem;
+}
+
+.slider-item {
+  display: flex;
   gap: 9rem;
 }
 
@@ -373,16 +409,36 @@ body {
   border-top-left-radius: 0.9rem;
 }
 
-.card-img-1 {
-  background: url("../assets/img/pets-katrine.png") no-repeat;
-}
-
-.card-img-2 {
+.card-img-0 {
   background: url("../assets/img/pets-jennifer.png") no-repeat;
 }
 
-.card-img-3 {
+.card-img-1 {
+  background: url("../assets/img/pets-sophia.png") no-repeat;
+}
+
+.card-img-2 {
   background: url("../assets/img/pets-woody.png") no-repeat;
+}
+
+.card-img-3 {
+  background: url("../assets/img/pets-scarlet.png") no-repeat;
+}
+
+.card-img-4 {
+  background: url("../assets/img/pets-katrine.png") no-repeat;
+}
+
+.card-img-5 {
+  background: url("../assets/img/pets-timmy.png") no-repeat;
+}
+
+.card-img-6 {
+  background: url("../assets/img/pets-freddie.png") no-repeat;
+}
+
+.card-img-7 {
+  background: url("../assets/img/pets-charly.png") no-repeat;
 }
 
 .card-info {
