--- a/shelter/css/style_queries.css
+++ b/shelter/css/style_queries.css
@@ -47,10 +47,23 @@
     min-width: 90%;
   }
 
+  .slider-wrapper {
+    width: 65rem;
+    margin: 0 auto;
+  }
+
+  @keyframes slide-left {
+    from {left: -72rem;}
+    to {left: 0rem;}
+  }
+  
+  @keyframes slide-right {
+    from {left: -72rem;}
+    to {left: -144rem;}
+  }
+
   .slider {
-    width: 100%;
-    gap: normal;
-    justify-content: space-between;
+    left: -72rem;
   }
 
   .card:nth-child(3) {
@@ -132,6 +145,30 @@
 
   .not-only-img img {
     max-width: 30rem;
+  }
+
+  /* SECTION - OUR-FRIENDS */
+  .slider-wrapper {
+    width: 54.44rem;
+  }
+
+  @keyframes slide-left {
+    from {left: -54.44rem;}
+    to {left: 0rem;}
+  }
+  
+  @keyframes slide-right {
+    from {left: -54.44rem;}
+    to {left: -108.8rem;}
+  }
+
+  .slider {
+    left: -54.44rem;
+    gap: 0.3rem;
+  }
+
+  .slider-item {
+    gap: 0.3rem;
   }
 }
 
@@ -219,8 +256,27 @@
     width: 70.8rem;
   }
 
-  .slider {
+  .slider-wrapper {
+    width: 58rem;
     margin: 0 1.3rem;
+  }
+
+  @keyframes slide-left {
+    from {left: -61.4rem;}
+    to {left: 0rem;}
+  }
+  
+  @keyframes slide-right {
+    from {left: -61.4rem;}
+    to {left: -122.8rem;}
+  }
+
+  .slider {
+    left: -61.4rem;
+    gap: 3.7rem;
+  }
+
+  .slider-item {
     gap: 3.7rem;
   }
 
@@ -449,9 +505,29 @@
   }
 
   /* SECTION - OUR-FRIENDS */
+  .slider-wrapper {
+    width: 27rem;
+    margin: 0 auto;
+  }
+
+  @keyframes slide-left {
+    from {left: -29rem;}
+    to {left: 0rem;}
+  }
+  
+  @keyframes slide-right {
+    from {left: -29rem;}
+    to {left: -58rem;}
+  }
+
   .slider {
+    left: -29rem;
+    gap: 2rem;
+  }
+
+  .slider-item {
+    /* gap: 3.7rem; */
     gap: normal;
-    justify-content: center;
   }
 
   .card:nth-child(2) {
@@ -546,18 +622,22 @@
   }
 
   .arrow-left {
+    order: 3;
+  }
+
+  .slider-wrapper {
+    margin-top: 2.1rem;
+    margin-bottom: 2rem;
+    order: 1;
+  }
+
+  .break {
+    width: 100%;
     order: 2;
   }
 
-  .slider {
-    order: 1;
-    gap: 0rem;
-    margin-top: 2.1rem;
-    margin-bottom: 2rem;
-  }
-
   .arrow-right {
-    order: 3;
+    order: 4;
     margin-left: 8rem;
   }
 
@@ -752,19 +832,11 @@
     justify-content: center;
   }
 
-  .arrow-left {
-    order: 2;
-  }
-
   .slider {
-    order: 1;
-    gap: 0rem;
-    margin-top: 2.1rem;
     margin-bottom: 2rem;
   }
 
   .arrow-right {
-    order: 3;
     margin-left: 8rem;
   }
 
