--- a/shelter/css/pets.css
+++ b/shelter/css/pets.css
@@ -227,6 +227,7 @@ body {
 
 .card-info {
   display: flex;
+  width: 27rem;
   height: 16.5rem;
   flex-direction: column;
   align-items: center;
@@ -240,6 +241,7 @@ body {
   line-height: 2.27rem;
   letter-spacing: 0.12rem;
   color: #545454;
+  pointer-events: none;
 }
 
 .card-btn {
