--- a/shelter/css/style.css
+++ b/shelter/css/style.css
@@ -443,6 +443,7 @@ body {
 
 .card-info {
   display: flex;
+  width: 27rem;
   height: 16.5rem;
   flex-direction: column;
   align-items: center;
@@ -456,6 +457,7 @@ body {
   line-height: 2.27rem;
   letter-spacing: 0.12rem;
   color: #545454;
+  pointer-events: none;
 }
 
 .card-btn {
