--- a/shelter/css/style_queries.css
+++ b/shelter/css/style_queries.css
@@ -421,20 +421,21 @@
   .burger-menu.active {
     transform: rotate(90deg);
     margin-right: 0.3rem;
+    transition: all 0.5s ease-in-out;
   }
   
   .nav-container {
     display: flex;
     position: fixed;
-    right: -200%;
+    right: -150%;
     top: 0;
     width: 32rem;
     height: 100%;
     min-height: 50rem;
     background-color: #292929;
-    transition: 0.6s;
     align-items: center;
     z-index: 11;
+    transition: 1s ease-out;
   }
 
   .nav-list {
@@ -458,6 +459,7 @@
 
   .nav-container.active {
     right: 0;
+    transition: all 1s ease-in-out;
   }
 
   /* SECTION - NOT ONLY */
